image links fix attempt 1

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <h1>Apple Pie Gallery</h1>
   <div class="slider-container">
     <div class="slide">
-      <img src="/images/pie_dough.jpg" class="slide-img" alt="Image of someone rolling dough with flour and a rolling pin"/>
+      <img src="./images/pie_dough.jpg" class="slide-img" alt="Image of someone rolling dough with flour and a rolling pin"/>
     </div>
     <div class="slide">
-        <img src="/images/pie_apples.jpg" class="slide-img" alt="Image of red apples on a dark table with one of them cut in half and into slices"/>
+        <img src="./images/pie_apples.jpg" class="slide-img" alt="Image of red apples on a dark table with one of them cut in half and into slices"/>
     </div>
     <div class="slide">
-        <img src="/images/pie_oven.jpg" class="slide-img" alt="Image of an older woman placing a pie into the oven with a younger girl beside her"/>
+        <img src="./images/pie_oven.jpg" class="slide-img" alt="Image of an older woman placing a pie into the oven with a younger girl beside her"/>
     </div>
     <div class="slide">
         <img src="/images/pie_done.jpg" class="slide-img" alt="Aerial image of a baked apple pie next to baskets of apples and fruit"/>
@@ -33,8 +33,6 @@
     </button>
   </div>
   <h2>Find the full recipe <a href="https://BakingGoods.com">HERE</a></h2>
-
-  <!-- javascript -->
 
     <script src="script.js">
     </script>
